--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -21,9 +21,9 @@ security:
                 authenticators:
                     - App\Security\CustomAuthenticator
             logout:
-                path: app_logout
+                path: logout
                 # where to redirect after logout
-                # target: app_any_route
+                # target: /
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
