--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "symfony/asset": "5.0.*",
         "symfony/console": "5.0.*",
         "symfony/dotenv": "5.0.*",
+        "symfony/error-handler": "5.0.*",
         "symfony/expression-language": "5.0.*",
         "symfony/flex": "^1.3.1",
         "symfony/form": "5.0.*",
@@ -31,7 +32,8 @@
         "symfony/validator": "5.0.*",
         "symfony/var-dumper": "5.0.*",
         "symfony/web-link": "5.0.*",
-        "symfony/yaml": "5.0.*"
+        "symfony/yaml": "5.0.*",
+      "ext-pdo": "*"
     },
     "require-dev": {
         "symfony/debug-pack": "*",
