--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,9 @@
         "symfony/validator": "5.0.*",
         "symfony/var-dumper": "5.0.*",
         "symfony/web-link": "5.0.*",
-        "symfony/yaml": "5.0.*"
+        "symfony/yaml": "5.0.*",
+        "tattali/calendar-bundle": "^1.2",
+        "twig/intl-extra": "^3.0"
     },
     "require-dev": {
         "symfony/debug-pack": "*",
