--- a/config/services.yaml
+++ b/config/services.yaml
@@ -23,7 +23,11 @@ services:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
     
-
+    App\Twig\AppExtension:
+        tags: [twig.extension]
+        
+    App\EventSubscriber\CalendarSubscriber:
+        tags: []
 
 
     # add more service definitions when explicit configuration is needed
