prawie wszystko zmienione

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -36,4 +36,4 @@ security:
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/profile, roles: ROLE_USER }
-        - { path: ^/wizyta, roles: ROLE_USER }
+        - { path: ^/visit, roles: ROLE_USER }
