--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "symfony/web-link": "5.0.*",
         "symfony/yaml": "5.0.*",
         "tattali/calendar-bundle": "^1.2",
+        "twig/extra-bundle": "^3.0",
         "twig/intl-extra": "^3.0"
     },
     "require-dev": {
