--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -25,7 +25,7 @@ security:
                 # where to redirect after logout
                 # target: /
 
-            # activate different ways to authenticate
+                    # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
 
             # https://symfony.com/doc/current/security/impersonating_user.html
@@ -34,6 +34,10 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/admin, roles: ROLE_OPERATOR }
         - { path: ^/profile, roles: ROLE_USER }
         - { path: ^/visit, roles: ROLE_USER }
+
+    role_hierarchy:
+        ROLE_OPERATOR: [ROLE_USER]
+        ROLE_ADMIN: [ROLE_OPERATOR]
