--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -36,7 +36,7 @@ security:
     access_control:
         - { path: ^/admin, roles: ROLE_OPERATOR }
         - { path: ^/profile, roles: ROLE_USER }
-        - { path: ^/visit, roles: ROLE_USER }
+        # - { path: ^/visit, roles: ROLE_USER }
 
     role_hierarchy:
         ROLE_OPERATOR: [ROLE_USER]
