--- a/composer.json
+++ b/composer.json
@@ -9,31 +9,33 @@
         "sensio/framework-extra-bundle": "^5.5",
         "stof/doctrine-extensions-bundle": "^1.4",
         "symfony/apache-pack": "^1.0",
-        "symfony/asset": "5.0.*",
-        "symfony/console": "5.0.*",
-        "symfony/dotenv": "5.0.*",
-        "symfony/error-handler": "5.0.*",
-        "symfony/expression-language": "5.0.*",
+        "symfony/asset": "5.2.*",
+        "symfony/console": "5.2.*",
+        "symfony/dotenv": "5.2.*",
+        "symfony/error-handler": "5.2.*",
+        "symfony/expression-language": "5.2.*",
         "symfony/flex": "^1.3.1",
-        "symfony/form": "5.0.*",
-        "symfony/framework-bundle": "5.0.*",
-        "symfony/http-client": "5.0.*",
-        "symfony/intl": "5.0.*",
-        "symfony/mailer": "5.0.*",
+        "symfony/form": "5.2.*",
+        "symfony/framework-bundle": "5.2.*",
+        "symfony/google-mailer": "5.2.*",
+        "symfony/http-client": "5.2.*",
+        "symfony/intl": "5.2.*",
+        "symfony/mailer": "5.2.*",
         "symfony/maker-bundle": "^1.15",
         "symfony/monolog-bundle": "^3.1",
-        "symfony/notifier": "5.0.*",
+        "symfony/notifier": "5.2.*",
         "symfony/orm-pack": "^1.0",
-        "symfony/process": "5.0.*",
-        "symfony/security-bundle": "5.0.*",
+        "symfony/process": "5.2.*",
+        "symfony/security-bundle": "5.2.*",
         "symfony/serializer-pack": "*",
-        "symfony/string": "5.0.*",
-        "symfony/translation": "5.0.*",
+        "symfony/string": "5.2.*",
+        "symfony/translation": "5.2.*",
         "symfony/twig-pack": "^1.0",
-        "symfony/validator": "5.0.*",
-        "symfony/var-dumper": "5.0.*",
-        "symfony/web-link": "5.0.*",
-        "symfony/yaml": "5.0.*",
+        "symfony/uid": "5.2.*",
+        "symfony/validator": "5.2.*",
+        "symfony/var-dumper": "5.2.*",
+        "symfony/web-link": "5.2.*",
+        "symfony/yaml": "5.2.*",
         "tattali/calendar-bundle": "^1.2",
         "twig/extra-bundle": "^3.0",
         "twig/intl-extra": "^3.0"
@@ -86,7 +88,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "5.0.*"
+            "require": "5.2.*"
         }
     }
 }
