--- a/.env
+++ b/.env
@@ -30,11 +30,11 @@ APP_SECRET=bcb3e8ede4bbfbb2bf4e1f7602c033d0
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 
-DATABASE_URL=mysql://przychodnia:root@127.0.0.1:3306/przychodnia?serverVersion=7.0
+DATABASE_URL=mysql://root:@127.0.0.1:3306/przychodnia?serverVersion=7.0
 
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/google-mailer ###
 # Gmail SHOULD NOT be used on production, use it in development only.
-# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+MAILER_DSN=gmail://j.kopniewski@gmail.com:maszak1998@default
 ###< symfony/google-mailer ###
